--- a/kittyweather/kittyweather.csproj
+++ b/kittyweather/kittyweather.csproj
@@ -19,7 +19,7 @@
         <ApplicationIdGuid>D2C661CE-3054-40CC-AD1B-C29B5DDBAF35</ApplicationIdGuid>
 
         <!-- Versions -->
-        <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+        <ApplicationDisplayVersion>1.0_preview1</ApplicationDisplayVersion>
         <ApplicationVersion>1</ApplicationVersion>
 
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
