--- a/kittyweather/kittyweather.csproj
+++ b/kittyweather/kittyweather.csproj
@@ -40,6 +40,7 @@
 
         <!-- Images -->
         <MauiImage Include="Resources\Images\*" />
+        <MauiImage Include="Resources\Images\Day\*" />
         <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
         <!-- Custom Fonts -->
